@@ -19,14 +19,15 @@ package com.taotao.cloud.shell.jcommand;
 import com.beust.jcommander.IParameterValidator;
 import com.beust.jcommander.ParameterException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 public class UrlParameterValidator implements IParameterValidator {
     @Override
     public void validate(String key, String value) throws ParameterException {
         try {
-            new URL(value);
-        } catch (MalformedURLException e) {
+			URL url = URI.create(value).toURL();
+		} catch (MalformedURLException e) {
             throw new ParameterException("参数 " + key + " 的值必须是 URL 格式");
         }
     }
